--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,4 +5,5 @@
   <h3><%= post.author %></h3>
   <p><%= post.body %></p>
   <%= link_to 'Show post', post_path(post) %>
+  <%= link_to 'Edit Post', edit_post_path(post) %>
 <% end %>
