--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,4 +6,5 @@
   <p><%= post.body %></p>
   <%= link_to 'Show post', post_path(post) %>
   <%= link_to 'Edit Post', edit_post_path(post) %>
+  <%= link_to 'Destroy Post', post, method: :delete %>
 <% end %>
